# Sistema-TuGestor

./: .gitignore  README.md  usecase.plantuml
recursos/: Colores.txt  Control.xlsx  Emparejamiento.xlsx  EmparejamientoFINAL.xlsx  Inscripción Tutorados TT9.xlsx  LEE.xlsx  Links.xlsx  Plantilla - Constancias Tutorados.docx  Plantilla - Constancias Tutores.docx  Plantilla - Reporte Colegios.docx  Plantilla - Reporte Final.docx  enlaces.xlsx  historial.json  ~$EmparejamientoFINAL.xlsx  ~$antilla - Constancias Tutores.docx
recursos/Qualtrics/: Updated_Qualtrics_Seguimiento_Tutore_2.xlsx  Updated_Qualtrics_Seguimiento_Tutores_1.xlsx  Updated_Qualtrics_Seguimiento_Tutores_3.xlsx  Updated_Qualtrics_Seguimiento_Tutores_n.xlsx
recursos/Qualtrics/historiales/: historial.json  historial2.json
recursos/Qualtrics/monitoreo/: monitoreo.json
recursos/historiales/: historial.json
recursos/monitoreo/: monitoreo.json
recursos/test_data/: emparejamiento_final.xlsx  plantilla_tutorados.docx  test_data.xlsx
stg/: index.html  jest.config.js  jest.config.mjs  package-lock.json  package.json  tsconfig.json
stg/src/: App.css  App.tsx  main.tsx
stg/src-tauri/: .gitignore  Cargo.toml  tauri.conf.json
stg/src-tauri/scripts/: enviar.js
stg/src-tauri/src/: main.rs
stg/src-tauri/src/emparejamiento/: emparejamiento.rs  mod.rs
stg/src-tauri/src/monitoreo/: derecha.rs  izquierda.rs  mod.rs  persistencia.rs
stg/src-tauri/src/notificaciones/: derecha.rs  enviar.rs  historial.rs  izquierda.rs  leer_archivos.rs  mod.rs  whatsapp.rs
stg/src-tauri/src/reportes/: colegios.rs  constancias.rs  fecha.rs  lee.rs  mod.rs  puj.rs  sponsor.rs  tutorados.rs  tutores.rs
stg/src-tauri/src/servicios/: logger.rs  mod.rs  tarea.rs  whatsapp.rs
stg/src/__mocks__/: dialog.ts  (+1 more)
stg/system_logs/: app_log.json
(+20 files in other folders)
