[package]
name = "stg"
version = "0.1.0"
description = "Sistema TuGestor"
authors = ["you"]
edition = "2021"

[build-dependencies]
tauri-build = { version = "1", features = [] }

[dependencies]
tauri = { version = "1", features = [ "shell-open", "fs-all", "dialog-all"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
calamine = "0.26.1"
chrono = "0.4.39"
xlsxwriter = "0.6.1"
lazy_static = "1.4"
docx-rs = "0.4" 
zip = "0.6"
once_cell = "1.20.3"
lettre = { version = "0.10", default-features = false, features = ["smtp-transport", "builder", "tokio1", "tokio1-rustls-tls"] }
oauth2 = { version = "4.3" }
reqwest = { version = "0.11", features = ["json", "rustls-tls"] }
tokio = { version = "1.0", features = ["full"] }

[features]
custom-protocol = ["tauri/custom-protocol"]
