[package]
name = "stg"
version = "0.1.0"
description = "Sistema TuGestor"
authors = ["you"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[build-dependencies]
tauri-build = { version = "1", features = [] }

[dependencies]
tauri = { version = "1", features = [ "shell-open", "fs-all", "dialog-all"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
calamine = "0.26.1"
chrono = "0.4.39"
xlsxwriter = "0.6.0"
lazy_static = "1.4"
docx-rs = "0.4" 
zip = "0.6"
once_cell = "1.20.3"
open = "4.0"
urlencoding = "2.1.0"
office = "0.8.1"  # Para trabajar con documentos Word
printpdf = "0.5"  # Para generar PDFs
rand = "0.8"


[features]
# This feature is used for production builds or when a dev server is not specified, DO NOT REMOVE!!
custom-protocol = ["tauri/custom-protocol"]
